RESOLVED FIXED282662
REGRESSION (286164@main-286179@main): ASSERTION FAILED: m_type == other.m_type : imported/w3c/web-platform-tests/scroll-animations/css/progress-based-animation-animation-longhand-properties.tentative.html
https://bugs.webkit.org/show_bug.cgi?id=282662
Summary REGRESSION (286164@main-286179@main): ASSERTION FAILED: m_type == other.m_typ...
Fujii Hironori
Reported 2024-11-05 17:00:55 PST
REGRESSION: ASSERTION FAILED: m_type == other.m_type : imported/w3c/web-platform-tests/scroll-animations/css/progress-based-animation-animation-longhand-properties.tentative.html History: https://results.webkit.org/?suite=layout-tests&test=imported%2Fw3c%2Fweb-platform-tests%2Fscroll-animations%2Fcss%2Fprogress-based-animation-animation-longhand-properties.tentative.html&style=debug Buildbot: builder Apple-Sequoia-Debug-AppleSilicon-WK2-Tests build 227 : 286179@main https://build.webkit.org/#/builders/1226/builds/227 https://build.webkit.org/results/Apple-Sequoia-Debug-AppleSilicon-WK2-Tests/286179@main%20(227)/imported/w3c/web-platform-tests/scroll-animations/css/progress-based-animation-animation-longhand-properties.tentative-crash-log.txt ASSERTION FAILED: m_type == other.m_type /Volumes/Data/worker/Apple-Sequoia-Debug-Build/build/Source/WebCore/animation/WebAnimationTime.cpp(214) : bool WebCore::WebAnimationTime::operator>=(const WebAnimationTime &) const 1 0x148912b28 WebCore::WebAnimationTime::operator>=(WebCore::WebAnimationTime const&) const 2 0x148908760 WebCore::WebAnimation::playState() const 3 0x148914008 WebCore::WebAnimation::updateFinishedState(WebCore::WebAnimation::DidSeek, WebCore::WebAnimation::SynchronouslyNotify) 4 0x148907408 WebCore::WebAnimation::tick() 5 0x1489072b4 WebCore::StyleOriginatedAnimation::tick() 6 0x1487ece8c WebCore::AnimationTimelinesController::updateAnimationsAndSendEvents(WTF::Seconds) 7 0x14964cbe8 WebCore::Document::updateAnimationsAndSendEvents() 8 0x14a872bd0 WebCore::Page::updateRendering()::$_9::operator()(WebCore::Document&) const 9 0x14a872b7c WTF::Detail::CallableWrapper<WebCore::Page::updateRendering()::$_9, void, WebCore::Document&>::call(WebCore::Document&) 10 0x1498c0d08 WTF::Function<void (WebCore::Document&)>::operator()(WebCore::Document&) const 11 0x14a821dfc WebCore::Page::forEachRenderableDocument(WTF::Function<void (WebCore::Document&)> const&) const 12 0x14a82107c WebCore::Page::updateRendering()::$_0::operator()(WebCore::RenderingUpdateStep, WTF::Function<void (WebCore::Document&)> const&) const 13 0x14a820bc0 WebCore::Page::updateRendering() 14 0x132f9382c WebKit::WebPage::updateRendering() 15 0x1303ac48c WebKit::RemoteLayerTreeDrawingArea::updateRendering() 16 0x1303b2cc4 WebCore::Timer::Timer<WebKit::RemoteLayerTreeDrawingArea, WebKit::RemoteLayerTreeDrawingArea>(WebKit::RemoteLayerTreeDrawingArea&, void (WebKit::RemoteLayerTreeDrawingArea::*)())::'lambda'()::operator()() const 17 0x1303b2bfc WTF::Detail::CallableWrapper<WebCore::Timer::Timer<WebKit::RemoteLayerTreeDrawingArea, WebKit::RemoteLayerTreeDrawingArea>(WebKit::RemoteLayerTreeDrawingArea&, void (WebKit::RemoteLayerTreeDrawingArea::*)())::'lambda'(), void>::call() 18 0x12f6a2238 WTF::Function<void ()>::operator()() const 19 0x1303b12c4 WebCore::Timer::fired() 20 0x14ab1962c WebCore::ThreadTimers::sharedTimerFiredInternal() 21 0x14ab234a8 WebCore::ThreadTimers::setSharedTimer(WebCore::SharedTimer*)::$_0::operator()() const 22 0x14ab23454 WTF::Detail::CallableWrapper<WebCore::ThreadTimers::setSharedTimer(WebCore::SharedTimer*)::$_0, void>::call() 23 0x144f80724 WTF::Function<void ()>::operator()() const 24 0x14aac4fb0 WebCore::MainThreadSharedTimer::fired() 25 0x14abd3cf0 WebCore::timerFired(__CFRunLoopTimer*, void*) 26 0x192fec184 __CFRUNLOOP_IS_CALLING_OUT_TO_A_TIMER_CALLBACK_FUNCTION__ 27 0x192febe28 __CFRunLoopDoTimer 28 0x192feb938 __CFRunLoopDoTimers 29 0x192fd10f0 __CFRunLoopRun 30 0x192fd0334 CFRunLoopRunSpecific 31 0x19418e608 -[NSRunLoop(NSRunLoop) runMode:beforeDate:] com.apple.WebKit.WebContent.Development terminated (pid 68807) for reason: crash
Attachments
Radar WebKit Bug Importer
Comment 1 2024-11-06 11:45:03 PST
Antoine Quint
Comment 2 2024-11-06 11:49:02 PST
286176@main is in that commit range, so this is the first thing to consider.
Antoine Quint
Comment 3 2024-11-12 07:31:52 PST
EWS
Comment 4 2024-11-12 08:49:18 PST
Committed 286484@main (d6e6d1cbd5c7): <https://commits.webkit.org/286484@main> Reviewed commits have been landed. Closing PR #36528 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.