REGRESSION (286164@main-286179@main): ASSERTION FAILED: m_type == other.m_type : imported/w3c/web-platform-tests/scroll-animations/css/progress-based-animation-animation-longhand-properties.tentative.html https://bugs.webkit.org/show_bug.cgi?id=282662 rdar://139374236

Reviewed by Mike Wyrzykowski.

Ensure we use a 0 value that matches whether the associated animation is progress-based
if the iteration count is 0, as is the case in the subtest that causes the crash in the
`scroll-animations/css/progress-based-animation-animation-longhand-properties.tentative.html`
WPT test.

* Source/WebCore/animation/AnimationEffectTiming.cpp:
(WebCore::AnimationEffectTiming::updateComputedProperties):

Canonical link: https://commits.webkit.org/286484@main